--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 .ipynb_checkpoints
 .DS_Store
-sigconf.aux
-sigconf.bbl
-sigconf.blg
-sigconf.fdb_latexmk
-sigconf.fls
-sigconf.out
-sigconf.log
-sigconf.pdf
-sigconf.synctex.gz
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.fls
+*.out
+*.log
+*.pdf
+*.synctex.gz
+
